--- a/homepagestories.html
+++ b/homepagestories.html
@@ -70,7 +70,7 @@
     </section>
     <!--the three dives-->
 <section class="the-three-dives">
-    <div class="container">
+    <div class="main-area">
         <div class="row">
             <div class=" col-4 col1  hite" >
                     <div class="mt-5 ml-4 div3">
