--- a/painmanagement.html
+++ b/painmanagement.html
@@ -594,13 +594,14 @@
     </section>
 <!--hands on training-->
 <!--subscribe section-->
-    <section class="mt-6">
+    <section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color  pt-3 ">
+            <div class="container bg-color">
                 <div class="row  mt-5 pb-5">
-                    <div class="col-1 Subscribe"></div>
-                    <div class="col-6  mt-3 Subscribe">Subscribe</div>
-                    <div class="col-5 mt-6 ">
+                    <div class="col-6  mt-3 Subscribe">
+                        <p>Subscribe</p>
+                    </div>
+                    <div class="col-5 second-subscribe">
                         <div class="Subscribe1">
                             <span>input</span>
                             <span class="float-right">Sign Up</span>
@@ -608,22 +609,22 @@
                         <hr>
                         <div class="Subscribe1">
                             <p>
-                                    Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
-                                    <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
-                                     Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
-                                     Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
-                                     mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
+                                Nullam sagittis pharetra ante, a convallis mauris euismod vel. Nullam quis diam ut urna euismod pellentesque.<br>
+                                <br>In nisl quam, accumsan eget ligula vestibulum, tincidunt sollicitudin sem.
+                                Vivamus mollis sapien sed neque fringilla vehicula. Suspendisse nec mattis massa.
+                                Vivamus id elit nec purus efficitur tempus sed sed orci. In sem metus, suscipit ac tincidunt quis,
+                                mattis ac libero. Maecenas sit amet venenatis mi, vitae placerat justo.
                             </p>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
-            
+
         </div>
     </section>
 <!--footer overall-->
 <section>  
-    <footer class="footer mt-5 pb-5 ">
+    <footer class="footer pb-5 ">
         <div class="container">
             <div class="container">
                 <div class="container">
