Fonts link updated

--- a/painmanagement.html
+++ b/painmanagement.html
@@ -4,8 +4,8 @@
     <title>Pain Management</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family-Raleway:400,800" />
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/painmenagement.css" />
@@ -52,46 +52,46 @@
             </div>           
         
             <div class="col-12 text-right pb-3 secondnav1">
-                Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
+                Robe McNamara; Summer intern, w/ Chance; her 9yr old mixed breed
             </div>
         </div>
-    </section>
-    <!--the empty red -->
-    <section class="bgcolor">
-        <div class="container">
-        <div class="row">
-            <div class="col-12 bgcolor "></div>
-        </div>
-        </div>
-    </section>
-    <!--the two dives-->
-<section class="the-three-dives">
-    <div class="main-area">
-        <div class="row">
-            <div class=" col-4 col1 two-div1 hite-one" >
-                    <div class="container mt-5 ml-4 hite-one">
-                        <div class="row mt-5 aligninng hite-one">
-                           <p class="two-div-1"> LiteCure Academy</p>
-                           <p class="two-div-1 white-color">Pain Management</p>
-                           <p class="two-div-1">Minimally Invasive</p>
-                           <p class="two-div-1">Wellness</p>
-                           <p class="two-div-1">Emerging Trends</p>
-                           <p class="two-div-1">school of business</p>
+        <!--the empty red -->
+        <section class="bgcolor">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 bgcolor "></div>
+                </div>
+            </div>
+        </section>
+        <!--the two dives-->
+        <section class="the-three-dives">
+            <div class="main-area">
+                <div class="row">
+                    <div class=" col-4 col1 two-div1 hite-one" >
+                        <div class="container mt-5 ml-4 hite-one">
+                            <div class="row mt-5 aligninng hite-one">
+                                <p class="two-div-1"> LiteCure Academy</p>
+                                <p class="two-div-1 white-color">Pain Management</p>
+                                <p class="two-div-1">Minimally Invasive</p>
+                                <p class="two-div-1">Wellness</p>
+                                <p class="two-div-1">Emerging Trends</p>
+                                <p class="two-div-1">school of business</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-8 col4 hite two-div2" >
+                        <div class="container mt-3 mb-5">
+                            <div class="row"><p class="two-div-2 white-color" >CE Courses</p></div>
+                            <div class="row"><p class="two-div-2">Videos</p></div>
+                            <div class="row"><p class="two-div-2">Downloads</p></div>
+                            <div class="row"><p class="two-div-2">Live Courses</p></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-8 col4 hite two-div2" >
-                    <div class="container mt-3 mb-5">
-                        <div class="row"><p class="two-div-2 white-color" >CE Courses</p></div>
-                        <div class="row"><p class="two-div-2">Videos</p></div>
-                        <div class="row"><p class="two-div-2">Downloads</p></div>
-                        <div class="row"><p class="two-div-2">Live Courses</p></div>
-                    </div>
-                </div>     
-            </div>     
-        </div>
-    </div>
-</section>
+            </div>
+            </div>
+        </section>
+    </section>
 <!--live educationn top courses-->
 <section class="live-education">
     <div class="container">
