--- a/homepagestories.html
+++ b/homepagestories.html
@@ -19,7 +19,9 @@
     <section class="hero" id="hero">     
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-5 white-color headerlogo" ><img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="44px"></div>
+                <div class="col-sm-12 col-md-5 white-color headerlogo" >
+                    <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px">
+                </div>
                 <div class=" col-sm-12 col-md-7 text-right pl-3 headerlogo1  welcome-logo  logo" >WELCOME</div>
             </div>
             <div class="row  mt-4">
