--- a/academiclandingpage01.html
+++ b/academiclandingpage01.html
@@ -25,28 +25,28 @@
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
-                    <div class="row">evidence</div>
-                    <div class="row">education</div>
-                    <div class="row">partnership</div> 
+                    <div class="row"><a href="#">evidence</a></div>
+                    <div class="row"><a href="#">education</a></div>
+                    <div class="row"><a href="#">partnership</a></div> 
                 </div>
                 <div class="col-sm-1 col-1 float-right icons-1  pr-4  text-center pt-3">
                     <div class="icons pt-3  pb-3">
-                    <div><i class="fa fa-search fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-user fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-envelope fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-phone fa-1x white-color" ></i></div>        
-                    <div><i class="fa fa-globe fa-1x white-color " ></i></div>        
+                    <div><a href="#"><i class="fa fa-search fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-user fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-envelope fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-phone fa-1x white-color" ></i></a></div>        
+                    <div><a href="#"><i class="fa fa-globe fa-1x white-color " ></i></a></div>        
                 </div>
                 </div>
             </div>
                 <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="144px" height="52px" alt="companion"></div>
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
-                    <div class="row white-color">companion products</div>
-                    <div class="row">companion animal health</div>
-                    <div class="row">employment</div>
-                    <div class="row">blog</div>
-                    <div class="row">support</div>
+                    <div class="row white-color"><a href="#" class="white-color">companion products</a></div>
+                    <div class="row"><a href="#">companion animal health</a></div>
+                    <div class="row"><a href="#">employment</a></div>
+                    <div class="row"><a href="#">blog</a></div>
+                    <div class="row"><a href="#">support</a></div>
             </div>
             </div>           
         
@@ -70,12 +70,12 @@
             <div class=" col-4 col1 two-div1" >
                     <div class="container hite-one">
                         <div class="row aligninng hite-one">
-                           <p class="two-div-1"> LiteCure Academy</p>
-                           <p class="two-div-1 ">Pain Management</p>
-                           <p class="two-div-1">Minimally Invasive</p>
-                           <p class="two-div-1">Wellness</p>
-                           <p class="two-div-1">Emerging Trends</p>
-                           <p class="two-div-1">school of business</p>
+                           <p class="two-div-1"><a href="#" class="white-color"> LiteCure Academy</a></p>
+                           <p class="two-div-1 "><a href="#">Pain Management</a></p>
+                           <p class="two-div-1"><a href="#">Minimally Invasive</a></p>
+                           <p class="two-div-1"><a href="#">Wellness</a></p>
+                           <p class="two-div-1"><a href="#">Emerging Trends</a></p>
+                           <p class="two-div-1"><a href="#">school of business</a></p>
                         </div>
                     </div>
                 </div>
