--- a/publicationarchivepage.html
+++ b/publicationarchivepage.html
@@ -90,7 +90,7 @@
 </section>
 <!--featured publications-->
 <section class="feature-publication">
-    <div class="container">
+    <div class="main-area">
         <div class="row upper-row">
             <div class="feature-header "><p >Featured Publications</p></div>
             <div class="ml-6 feature-header-text "><p>Input search terms here</p><p>Search</p></div>
