--- a/homepage01.html
+++ b/homepage01.html
@@ -38,7 +38,15 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="152" height="52"></div>
+        </div>
+        <div class="main-area">
+            <div class="row mt-6 white-color" >
+                <div class="computer-area">
+                    <img src="assets/computer.png" width="188" height="97">
+                </div>
+            </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
                     <div class="row white-color">companion products</div>
@@ -53,8 +61,8 @@
                 </div>
                 <p>Watch: The LiteCure Difference</p>
             </div>
-            </div>           
-        
+            </div>
+        </div>
             <div class="col-12 text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
@@ -120,11 +128,11 @@
             <div class="container">
                 <div class="row pt-5 pb-5" >
                     <div class="col-12 ml-5 text-left">
-                        <h4 class=""><strong>What's new?</strong></h4>
+                        <h4 class="whatsnew"><strong>What's new?</strong></h4>
                     </div>
                 </div>
             </div>
-            <div class="container mr6">
+            <div class="main-area-carosel mr6">
                 <div id="myCarousel" class="carousel slide" data-ride="">
                       <!-- Indicators -->
                     <ol class="carousel-indicators carouselinicator">
@@ -654,8 +662,8 @@
                 <!--subscribe section-->
     <section class="subscribing-area">
         <div class="pb-5">
-            <div class="container bg-color">
-                <div class="row  mt-5 pb-5">
+            <div class="main-area extea">
+                <div class="row bg-color">
                     <div class="col-6  mt-3 Subscribe">
                         <p>Subscribe</p>
                     </div>
