--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-sm-12 col-md-5  white-color headerlogo" >
                 <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px">
             </div>
-            <div class=" col-sm-12 col-md-7 text-right pl-3  pt-5 headerlogo1 logo" >WELCOME</div>
+            <div class=" col-sm-12 col-md-7 text-right pl-3 headerlogo1 logo" >WELCOME</div>
         </div>
         <div class="row  mt-4">
             <div class="col-11 white-color secondnav text-left pb-4 pt-2">
@@ -40,7 +40,15 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="152" height="52"></div>
+    </div>
+    <div class="main-area">
+        <div class="row mt-6 white-color" >
+            <div class="computer-area">
+                <img src="assets/computer.png" width="188" height="97">
+            </div>
+        </div>
+    </div>
+    <div class="container">
         <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
                 <div class="row white-color">companion products</div>
@@ -56,7 +64,7 @@
                 <p>Watch: The LiteCure Difference</p>
             </div>
         </div>
-
+    </div>
         <div class="col-12 text-right pb-3 secondnav1">
             Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
         </div>
@@ -124,11 +132,11 @@
         <div class="container">
             <div class="row pt-5 pb-5" >
                 <div class="col-12 ml-5 text-left">
-                    <h4 class=""><strong>What's new?</strong></h4>
+                    <h4 class="whatsnew"><strong>What's new?</strong></h4>
                 </div>
             </div>
         </div>
-        <div class="container mr6">
+        <div class="main-area-carosel mr6">
             <div id="myCarousel" class="carousel slide" data-ride="">
                 <!-- Indicators -->
                 <ol class="carousel-indicators carouselinicator">
@@ -144,7 +152,9 @@
                     <div class="item active">
                         <div class="row ">
                             <div class="col-2 ">
-                                <img class="main-images" src="assets/images.jpg" width="175px" height="251px;">
+                                <div class="image-main-area">
+                                    <img class="main-images" src="assets/images.jpg" width="175px" height="251px;">
+                                </div>
                             </div>
                             <div class="col-4 pt-4  ">
                                 <div class="firstslider red-size">
@@ -658,8 +668,8 @@
 <!--subscribe section-->
 <section class="subscribing-area">
     <div class="pb-5">
-        <div class="container bg-color">
-            <div class="row  mt-5 pb-5">
+        <div class="main-area extea">
+            <div class="row bg-color">
                 <div class="col-6  mt-3 Subscribe">
                     <p>Subscribe</p>
                 </div>
