--- a/academiclandingpage01.html
+++ b/academiclandingpage01.html
@@ -39,8 +39,16 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="144px" height="52px" alt="companion"></div>
-            <div class="row mt-5">
+        </div>
+        <div class="main-area">
+            <div class="row mt-6 white-color" >
+                <div class="computer-area">
+                    <img src="assets/computer.png" width="188" height="97">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+        <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
                     <div class="row white-color"><a href="#" class="white-color">companion products</a></div>
                     <div class="row"><a href="#">companion animal health</a></div>
@@ -48,11 +56,12 @@
                     <div class="row"><a href="#">blog</a></div>
                     <div class="row"><a href="#">support</a></div>
             </div>
-            </div>           
-        
+        </div>
+
             <div class="col-12 text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
+        </div>
         </div>
     </section>
     <!--the empty red -->
