--- a/academylandingpage.html
+++ b/academylandingpage.html
@@ -40,7 +40,15 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" >other logo will set here</div>
+        </div>
+            <div class="main-area">
+                <div class="row mt-6 white-color" >
+                    <div class="computer-area">
+                        <img src="assets/computer.png" width="188" height="97">
+                    </div>
+                </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
                     <div class="row white-color">companion products</div>
@@ -50,8 +58,8 @@
                     <div class="row">support</div>
             </div>
             <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>BUSINESS</p></div>
-            </div>           
-        
+            </div>
+        </div>
             <div class="col-12 text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
