--- a/academylandingpagepainmanagement.html
+++ b/academylandingpagepainmanagement.html
@@ -39,7 +39,15 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" >other logo will set here</div>
+        </div>
+            <div class="main-area">
+                <div class="row mt-6 white-color" >
+                    <div class="computer-area">
+                        <img src="assets/computer.png" width="188" height="97">
+                    </div>
+                </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
                     <div class="row white-color">companion products</div>
@@ -49,48 +57,48 @@
                     <div class="row">support</div>
             </div>
             <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>Pain Management</p></div>
-            </div>           
-        
+            </div>
             <div class="col-12 text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance; her 9yr old mixed breed
             </div>
         </div>
-        <!--the empty red -->
-        <section class="bgcolor">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 bgcolor "></div>
-                </div>
+    </section>
+
+    <!--the empty red -->
+    <section class="bgcolor">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 bgcolor "></div>
             </div>
-        </section>
-        <!--the two dives-->
-        <section class="the-three-dives">
-            <div class="main-area">
-                <div class="row">
-                    <div class=" col-4 col1 two-div1 hite-one" >
-                        <div class="container mt-5 ml-4 hite-one">
-                            <div class="row mt-5 aligninng hite-one">
-                                <p class="two-div-1"> LiteCure Academy</p>
-                                <p class="two-div-1 white-color">Pain Management</p>
-                                <p class="two-div-1">Minimally Invasive</p>
-                                <p class="two-div-1">Wellness</p>
-                                <p class="two-div-1">Emerging Trends</p>
-                                <p class="two-div-1">school of business</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-8 col4 hite two-div2" >
-                        <div class="container mt-3 mb-5">
-                            <div class="row"><p class="two-div-2 white-color" >CE Courses</p></div>
-                            <div class="row"><p class="two-div-2">Videos</p></div>
-                            <div class="row"><p class="two-div-2">Downloads</p></div>
-                            <div class="row"><p class="two-div-2">Live Courses</p></div>
+        </div>
+    </section>
+    <!--the two dives-->
+    <section class="the-three-dives">
+        <div class="main-area">
+            <div class="row">
+                <div class=" col-4 col1 two-div1 hite-one" >
+                    <div class="container mt-5 ml-4 hite-one">
+                        <div class="row mt-5 aligninng hite-one">
+                            <p class="two-div-1"> LiteCure Academy</p>
+                            <p class="two-div-1 white-color">Pain Management</p>
+                            <p class="two-div-1">Minimally Invasive</p>
+                            <p class="two-div-1">Wellness</p>
+                            <p class="two-div-1">Emerging Trends</p>
+                            <p class="two-div-1">school of business</p>
                         </div>
                     </div>
                 </div>
+                <div class="col-8 col4 hite two-div2" >
+                    <div class="container mt-3 mb-5">
+                        <div class="row"><p class="two-div-2 white-color" >CE Courses</p></div>
+                        <div class="row"><p class="two-div-2">Videos</p></div>
+                        <div class="row"><p class="two-div-2">Downloads</p></div>
+                        <div class="row"><p class="two-div-2">Live Courses</p></div>
+                    </div>
+                </div>
             </div>
-            </div>
-        </section>
+        </div>
+        </div>
     </section>
 <!--live educationn top courses-->
 <section class="live-education">
