--- a/academylandingwellness.html
+++ b/academylandingwellness.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Academy Landing Page</title>
+    <title>Wellness</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     
@@ -40,7 +40,15 @@
                     </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" > <img src="assets/logos/liteCurelogo.png" width="144px" height="52px" alt="companion"></div>
+        </div>
+            <div class="main-area">
+                <div class="row mt-6 white-color" >
+                    <div class="computer-area">
+                        <img src="assets/computer.png" width="188" height="97">
+                    </div>
+                </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
                     <div class="row"><a href="#" class="white-color">companion products</a></div>
