--- a/academyminimallyinvasive.html
+++ b/academyminimallyinvasive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-    <title>Academy Landing Page 01</title>
+    <title>Minimally Invasive</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
@@ -38,7 +38,15 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="144px" height="52px" alt="companion"></div>
+        </div>
+            <div class="main-area">
+                <div class="row mt-6 white-color" >
+                    <div class="computer-area">
+                        <img src="assets/computer.png" width="188" height="97">
+                    </div>
+                </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
                     <div class="row "><a href="#" class="white-color">companion products</a></div>
@@ -48,8 +56,7 @@
                     <div class="row"><a href="#">support</a></div>
             </div>
             <div class="col-9 secondnav1 text-right lg-text logo-one"><p>MINIMALLY INVASIVE</p></div>
-        </div>           
-        
+            </div>
             <div class="col-12 text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
