--- a/dashboard.html
+++ b/dashboard.html
@@ -87,7 +87,15 @@
                         </div>
                     </div>
                 </div>
-                 <div class="row mt-6 white-color" ><img src='assets/logos/liteCurelogo.png' width="144px" height="52px" alt="companion"></div>
+            </div>
+                <div class="main-area">
+                    <div class="row mt-6 white-color" >
+                        <div class="computer-area">
+                            <img src="assets/computer.png" width="188" height="97">
+                        </div>
+                    </div>
+                </div>
+            <div class="container">
                 <div class="row mt-5">
                     <div class="col-5 secondnav1  text-left">
                         <div class="row white-color">companion products</div>
