--- a/homepage01.html
+++ b/homepage01.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-5  white-color headerlogo" ><img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px"></div>
-                <div class=" col-sm-12 col-md-7 text-right pl-3  pt-5 headerlogo1 logo" >WELCOME</div>
+                <div class=" col-sm-12 col-md-7 text-right pl-3 headerlogo1 logo" >WELCOME</div>
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
@@ -45,7 +45,7 @@
                     <img src="assets/computer.png" width="188" height="97">
                 </div>
             </div>
-            </div>
+        </div>
         <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
@@ -87,7 +87,7 @@
                                 <div class="div3"><p>Publications</p></div>
                                 <div class="div3"><p>Advisory Board</p></div>
                                 <div class="div3"><p>Ongoing Research</p></div>
-                            </div>      
+                            </div>
                         </div>
                     </div>
                     <div class="col-4 col4 hite" >
