--- a/homepagestories.html
+++ b/homepagestories.html
@@ -40,7 +40,15 @@
                 </div>
                 </div>
             </div>
-                <div class="row mt-6 white-color" ><img src="assets/logos/logos1.png" width="152" height="52"></div>
+        </div>
+            <div class="main-area">
+                <div class="row mt-6 white-color" >
+                    <div class="computer-area">
+                        <img src="assets/computer.png" width="188" height="97">
+                    </div>
+                </div>
+            </div>
+        <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
                     <div class="row white-color">companion products</div>
