--- a/academiclandingpage01.html
+++ b/academiclandingpage01.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/academiclandingpage01.css" />
+    <link rel="stylesheet" href="css/academylandingcombine.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -58,7 +59,7 @@
             </div>
         </div>
 
-            <div class="col-12 text-right pb-5 secondnav1">
+            <div class="col-12 container text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
