--- a/homepage01.html
+++ b/homepage01.html
@@ -24,17 +24,17 @@
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
-                    <div class="row">evidence</div>
-                    <div class="row">education</div>
-                    <div class="row">partnership</div> 
+                    <div class="row"><a href="#">evidence</a></div>
+                    <div class="row"><a href="#">education</a></div>
+                    <div class="row"><a href="#">partnership</a></div> 
                 </div>
                 <div class="col-sm-1 col-1 float-left  pr-4  text-center pt-3">
                     <div class="icons pt-3  pb-3">
-                    <div><i class="fa fa-search fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-user fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-envelope fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-phone fa-1x white-color" ></i></div>        
-                    <div><i class="fa fa-globe fa-1x white-color " ></i></div>        
+                    <div><a href="#"><i class="fa fa-search fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-user fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-envelope fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-phone fa-1x white-color" ></i></a></div>        
+                    <div><a href="#"><i class="fa fa-globe fa-1x white-color " ></i></a></div>        
                 </div>
                 </div>
             </div>
@@ -49,11 +49,11 @@
         <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
-                    <div class="row white-color">companion products</div>
-                    <div class="row">companion animal health</div>
-                    <div class="row">employment</div>
-                    <div class="row">blog</div>
-                    <div class="row">support</div>
+                    <div class="row"><a href="#" class="white-color">companion products</a></div>
+                    <div class="row"><a href="#">companion animal health</a></div>
+                    <div class="row"><a href="#">employment</a></div>
+                    <div class="row"><a href="#">blog</a></div>
+                    <div class="row"><a href="#">support</a></div>
             </div>
             <div class="col-7 text-right play-logo ">
                 <div class="arrow-img">
@@ -63,7 +63,7 @@
             </div>
             </div>
         </div>
-            <div class="col-12 text-right pb-3 secondnav1">
+            <div class="col-12 container text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
@@ -82,25 +82,25 @@
         <div class="row">
                 <div class="col-4 col2 hite">
                         <div class="container mt-5  ml-4 ">
-                            <div class="row three-dives-1">
-                                <div class="div3 opacity text-white" >Evidence &amp; Science</div>
-                                <div class="div3"><p>Publications</p></div>
-                                <div class="div3"><p>Advisory Board</p></div>
-                                <div class="div3"><p>Ongoing Research</p></div>
+                            <div class="row  three-dives-1">
+                                <div class="div3 " ><a href="#" class="opacity text-white">Evidence &amp; Science</a></div>
+                                <div  class="div1-further "><a href="#">Publications</a></div>
+                                <div  class="div1-further "><a href="#">Advisory Board</a></div>
+                                <div  class="div1-further "><a href="#">Ongoing Research</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-4 col4 hite" >
-                            <div class="container mt-5 div3">
-                                <div class="row">Education &amp; Training</div>
+                            <div class="container ml-3 mt-5">
+                                <div class="row div2-div3"><a href="#">Education &amp; Training</a></div>
                              </div>
                          </div>
                         <div class="col-4 col3 hite" >
-                            <div class="container mt-5 div3">
-                                <div class="row">Stories</div>
+                            <div class="container mt-5 ml-3 div2-div3">
+                                <div class="row"><a href="#">Stories</a></div>
                             </div>
-            </div>
-        </div>
+                        </div>
+                    </div>
     </div>
 </section>
 
