--- a/homepagestories.html
+++ b/homepagestories.html
@@ -26,17 +26,17 @@
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
-                    <div class="row">evidence</div>
-                    <div class="row">education</div>
-                    <div class="row">partnership</div> 
+                    <div class="row"><a href="#">evidence</a></div>
+                    <div class="row"><a href="#">education</a></div>
+                    <div class="row"><a href="#">partnership</a></div> 
                 </div>
                 <div class="col-sm-1 col-1 float-left  pr-4  text-center pt-3">
                     <div class="icons pt-3  pb-3">
-                    <div><i class="fa fa-search fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-user fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-envelope fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-phone fa-1x white-color" ></i></div>        
-                    <div><i class="fa fa-globe fa-1x white-color " ></i></div>        
+                    <div><a href="#"><i class="fa fa-search fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-user fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-envelope fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-phone fa-1x white-color" ></i></a></div>        
+                    <div><a href="#"><i class="fa fa-globe fa-1x white-color " ></i></a></div>        
                 </div>
                 </div>
             </div>
@@ -51,11 +51,11 @@
         <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
-                    <div class="row white-color">companion products</div>
-                    <div class="row">companion animal health</div>
-                    <div class="row">employment</div>
-                    <div class="row">blog</div>
-                    <div class="row">support</div>
+                    <div class="row "><a href="#" class="white-color">companion products</a></div>
+                    <div class="row"><a href="#">companion animal health</a></div>
+                    <div class="row"><a href="#">employment</a></div>
+                    <div class="row"><a href="#">blog</a></div>
+                    <div class="row"><a href="#">support</a></div>
             </div>
             <div class="col-7 text-right play-logo ">
                 <div class="arrow-img">
@@ -65,7 +65,7 @@
             </div>
         </div>           
         
-            <div class="col-12 text-right pb-3 secondnav1">
+            <div class="col-12 container text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
@@ -83,25 +83,25 @@
     <div class="main-area">
         <div class="row">
             <div class=" col-4 col1  hite" >
-                    <div class="mt-5 ml-4 div3">
-                        <div class="row">
-                            Evidence &amp; Science
+                    <div class="mt-5 ml-4 ">
+                        <div class="row div2-div3">
+                            <p><a href="#">Evidence &amp; Science</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 col4 hite" >
-                        <div class="container mt-5 div3">
-                            <div class="row">Education &amp; Training</div>
+                        <div class="container mt-5 ">
+                            <div class="row div2-div3 opacity"><a href="#" >Education &amp; Training</a></div>
                          </div>
                      </div>
                      <div class=" col-4 col2 hite">
                             <div class=" container mt-5   ml-4 ">
                                 <div class="row three-dives-1">
-                                    <div class="div3 opacity     text-white" >Stories</div>
-                                    <div class="div3">Customers</div>
-                                    <div class="div3">Clinical</div>
-                                    <div class="div3">business</div>
-                                    <div class="div3">Pet Owners</div>
+                                    <div class="div3 opacity" ><a href="#" class="opacity white-color">Stories</a></div>
+                                    <div class="div1-further"><a href="#">Customers</a></div>
+                                    <div class="div1-further"><a href="#">Clinical</a></div>
+                                    <div class="div1-further"><a href="#">business</a></div>
+                                    <div class="div1-further"><a href="#">Pet Owners</a></div>
                                 </div>      
                             </div>
                         </div>
