--- a/academylandingpagepainmanagement.html
+++ b/academylandingpagepainmanagement.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/painmenagement.css" />
+    <link rel="stylesheet" href="css/academylandingcombine.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -25,17 +26,17 @@
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
-                    <div class="row">evidence</div>
-                    <div class="row">education</div>
-                    <div class="row">partnership</div> 
+                    <div class="row"><a  href="#">evidence</a></div>
+                    <div class="row"><a href="#">education</a></div>
+                    <div class="row"><a href="#">partnership</a></div> 
                 </div>
                 <div class="col-sm-1 col-1 float-right icons-1  pr-4  text-center pt-3">
                     <div class="icons pt-3  pb-3">
-                    <div><i class="fa fa-search fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-user fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-envelope fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-phone fa-1x white-color" ></i></div>        
-                    <div><i class="fa fa-globe fa-1x white-color " ></i></div>        
+                    <div><a href="#"><i class="fa fa-search fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-user fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-envelope fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-phone fa-1x white-color" ></i></a></div>        
+                    <div><a href="#"><i class="fa fa-globe fa-1x white-color " ></i></a></div>        
                 </div>
                 </div>
             </div>
@@ -50,15 +51,15 @@
         <div class="container">
             <div class="row mt-5">
             <div class="col-3 secondnav1  text-left">
-                    <div class="row white-color">companion products</div>
-                    <div class="row">companion animal health</div>
-                    <div class="row">employment</div>
-                    <div class="row">blog</div>
-                    <div class="row">support</div>
+                    <div class="row "><a href="#" class="white-color">companion products</a></div>
+                    <div class="row"><a href="#">companion animal health</a></div>
+                    <div class="row"><a href="#">employment</a></div>
+                    <div class="row"><a href="#">blog</a></div>
+                    <div class="row"><a href="#">support</a></div>
             </div>
             <div class="col-9 secondnav1 text-right lg-text logo-one"> <p>Pain Management</p></div>
             </div>
-            <div class="col-12 text-right pb-3 secondnav1">
+            <div class="col-12 container text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance; her 9yr old mixed breed
             </div>
         </div>
@@ -77,23 +78,23 @@
         <div class="main-area">
             <div class="row">
                 <div class=" col-4 col1 two-div1 hite-one" >
-                    <div class="container mt-5 ml-4 hite-one">
+                    <div class="container mt-5 ml-5 hite-one">
                         <div class="row mt-5 aligninng hite-one">
-                            <p class="two-div-1"> LiteCure Academy</p>
-                            <p class="two-div-1 white-color">Pain Management</p>
-                            <p class="two-div-1">Minimally Invasive</p>
-                            <p class="two-div-1">Wellness</p>
-                            <p class="two-div-1">Emerging Trends</p>
-                            <p class="two-div-1">school of business</p>
+                            <p class="two-div-1"><a href="#" class="white-color"> LiteCure Academy</a></p>
+                            <p class="two-div-1"><a href="#" class="white-color">Pain Management</a></p>
+                            <p class="two-div-1"><a href="#">Minimally Invasive</a></p>
+                            <p class="two-div-1"><a href="#">Wellness</a></p>
+                            <p class="two-div-1"><a href="#">Emerging Trends</a></p>
+                            <p class="two-div-1"><a href="#">school of business</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-8 col4 hite two-div2" >
-                    <div class="container mt-3 mb-5">
-                        <div class="row"><p class="two-div-2 white-color" >CE Courses</p></div>
-                        <div class="row"><p class="two-div-2">Videos</p></div>
-                        <div class="row"><p class="two-div-2">Downloads</p></div>
-                        <div class="row"><p class="two-div-2">Live Courses</p></div>
+                    <div class="container ml-5 mt-3 mb-5">
+                        <div class="row"><p class="two-div-2" ><a href="#" class="white-color">CE Courses</a></p></div>
+                        <div class="row"><p class="two-div-2"><a href="#">Videos</a></p></div>
+                        <div class="row"><p class="two-div-2"><a href="#">Downloads</a></p></div>
+                        <div class="row"><p class="two-div-2"><a href="#">Live Courses</a></p></div>
                     </div>
                 </div>
             </div>
