--- a/liveeducation.html
+++ b/liveeducation.html
@@ -26,17 +26,17 @@
             </div>
             <div class="row  mt-4">
                 <div class="col-11 white-color secondnav text-left pb-4 pt-2">
-                    <div class="row">evidence</div>
-                    <div class="row">education</div>
-                    <div class="row">partnership</div> 
+                    <div class="row"><a href="#">evidence</a></div>
+                    <div class="row"><a href="#">education</a></div>
+                    <div class="row"><a href="#">partnership</a></div> 
                 </div>
                 <div class="col-sm-1 col-1 float-right icons-1  pr-4  text-center pt-3">
                     <div class="icons pt-3  pb-3">
-                    <div><i class="fa fa-search fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-user fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-envelope fa-1x white-color" ></i></div>
-                    <div><i class="fa fa-phone fa-1x white-color" ></i></div>        
-                    <div><i class="fa fa-globe fa-1x white-color " ></i></div>        
+                    <div><a href="#"><i class="fa fa-search fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-user fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-envelope fa-1x white-color" ></i></a></div>
+                    <div><a href="#"><i class="fa fa-phone fa-1x white-color" ></i></a></div>        
+                    <div><a href="#"><i class="fa fa-globe fa-1x white-color " ></i></a></div>        
                 </div>
                 </div>
             </div>
@@ -51,15 +51,15 @@
         <div class="container">
             <div class="row mt-5">
             <div class="col-5 secondnav1  text-left">
-                    <div class="row white-color">companion products</div>
-                    <div class="row">companion animal health</div>
-                    <div class="row">employment</div>
-                    <div class="row">blog</div>
-                    <div class="row">support</div>
+                    <div class="row"><a href="#" class="white-color">companion products</a></div>
+                    <div class="row"><a href="#">companion animal health</a></div>
+                    <div class="row"><a href="#">employment</a></div>
+                    <div class="row"><a href="#">blog</a></div>
+                    <div class="row"><a href="#">support</a></div>
             </div>
             </div>           
         
-            <div class="col-12 text-right pb-3 secondnav1">
+            <div class="col-12 container text-right pb-3 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
@@ -79,15 +79,15 @@
             <div class=" col-4 col1 two-div1 hite" >
                     <div class="container mt-5 ml-4 ">
                         <div class="row">
-                           <p class="two-div-1">Live Education</p>
+                          <p class="two-div-1"><a href="#" class="white-color">Live Education</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-8 col4 hite two-div2" >
                     <div class="container mt-3 mb-5">
-                        <div class="row"><p class="two-div-2 white-color" >Courses</p></div>
-                        <div class="row"><p class="two-div-2">Tradeshows</p></div>
-                        <div class="row"><p class="two-div-2">Webinars</p></div>
+                        <div class="row"><p class="two-div-2" ><a href="#" class="white-color">Courses</a></p></div>
+                        <div class="row"><p class="two-div-2"><a href="#">Tradeshows</a></p></div>
+                        <div class="row"><p class="two-div-2"><a href="#">Webinars</a></p></div>
                     </div>
                 </div>     
             </div>     
