--- a/publicationarchivepage.html
+++ b/publicationarchivepage.html
@@ -57,7 +57,7 @@
             </div>
             </div>
         
-            <div class="col-12 text-right pb-5 secondnav1">
+            <div class="col-12 container text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
