--- a/academyminimallyinvasive.html
+++ b/academyminimallyinvasive.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col-9 secondnav1 text-right lg-text logo-one"><p>MINIMALLY INVASIVE</p></div>
             </div>
-            <div class="col-12 text-right pb-5 secondnav1">
+            <div class="col-12 container text-right pb-5 secondnav1">
                 Robe McNamara; Summer intern, w/ Chance;her 9yr old mixed breed
             </div>
         </div>
